# CIP-Customer-Intelligence-Protocol

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: scaffold.schema.json
docs/contracts/: matcher-mantic-alignment.md
scaffolds/: budget_overview.yaml  spending_review.yaml  symptom_overview.yaml
scripts/: check_imports.py  check_mantic_runtime.py
scripts/dev/: benchmark_hotpaths.py  generate_scaffold_schema.py
src/cip_protocol/: __init__.py  __main__.py  cip.py  control.py  conversation.py  domain.py  mantic_adapter.py  telemetry.py
src/cip_protocol/cli/: playground.py  scaffold_health.py
src/cip_protocol/data/: __init__.py  loader.py  models.py  registry.py  source.py  validator.py
src/cip_protocol/engagement/: __init__.py  detector.py  layered_scoring.py  parsing.py  scoring.py  store.py
src/cip_protocol/health/: __init__.py  analysis.py  report.py  scoring.py
src/cip_protocol/llm/: __init__.py  client.py  provider.py  response.py
src/cip_protocol/llm/providers/: anthropic.py  mock.py  openai.py
src/cip_protocol/orchestration/: __init__.py  errors.py  pool.py  runner.py
src/cip_protocol/scaffold/: __init__.py  engine.py  loader.py  matcher.py  models.py  registry.py  renderer.py  validator.py
src/cip_protocol/scaffold/builtins/: argument_analysis.yaml  orchestration_layer_assessment.yaml
tests/: conftest.py  test_argument_analysis.py  test_cip_facade.py  test_context_exports.py  test_control.py  test_control_integration.py  test_conversation.py  test_data_loader.py  test_data_models.py  test_data_registry.py  test_data_validator.py  test_domain_config.py  test_engagement_detector.py  test_engagement_layered.py  test_engagement_parsing.py  test_engagement_scoring.py  test_engagement_store.py  test_explainability.py  test_health_backend.py  test_llm_client.py  test_mantic_adapter.py  test_matcher.py  test_matcher_mantic_alignment.py  test_orchestration_runner.py  test_perf_mode.py  test_provider_pool.py  test_providers.py  test_renderer.py  test_scaffold_engine.py  test_scaffold_health.py  test_scaffold_validation_loader.py
