[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cip-protocol"
version = "0.1.0"
description = "Customer Intelligence Protocol — domain-agnostic framework for consumer-facing MCP servers"
readme = {text = "CIP Protocol — domain-agnostic framework for consumer-facing MCP servers.", content-type = "text/plain"}
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["anthropic>=0.40", "openai>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.sdist]
include = ["src/cip_protocol"]

[tool.hatch.build.targets.wheel]
packages = ["src/cip_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
