[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cip-protocol"
version = "0.3.1"
description = "Customer Intelligence Protocol — domain-agnostic framework for consumer-facing MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
re2 = ["google-re2>=1.1"]
mantic = ["mantic-thinking>=2.2.0,<3.0.0"]
all = ["anthropic>=0.40", "openai>=1.50", "google-re2>=1.1", "mantic-thinking>=2.2.0,<3.0.0"]
full = ["anthropic>=0.40", "openai>=1.50", "google-re2>=1.1", "mantic-thinking>=2.2.0,<3.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
cip = "cip_protocol.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["src/cip_protocol"]

[tool.hatch.build.targets.wheel]
packages = ["src/cip_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
